# vulnerabilities-catalog

./: Makefile  README.md  docker-compose.yaml
.github/workflows/: sync-harvester.yaml  sync-injector.yaml
harvester/: Dockerfile  app.py  local.env  pyproject.toml
harvester/handlers/: DownloadHandler.py  IJSONHandler.py  JSONHandler.py  XMLHandler.py  content_handler.py
harvester/processors/: sources_processor.py
harvester/rabbit/: rabbit_queue.py
injector/: Dockerfile  app.py  config.py
injector/db/: mongoHandler.py
injector/procesors/: cve.py  cwe.py  epss.py
injector/rabbit/: rabbit_consumer.py
