[tool.poetry]
name = "vulnerabilities-catalog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vulnerabilities_catalog"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
pandas = "^2.0.3"
loguru = "^0.7.0"
pydantic = "^2.0"
flask = "^2.3.2"
flask-pymongo = "^2.3.0"
requests = "^2.31.0"
tqdm = "^4.65.0"
ijson = "^3.2.2"
parse = "^1.19.1"
pika = "^1.3.2"
aio-pika = "^9.1.3"
motor = "^3.2.0"
dnspython = "^2.3.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
